hotfix: product-text text-align fixed

--- a/style/blocks/_products.scss
+++ b/style/blocks/_products.scss
@@ -113,6 +113,10 @@
     margin-bottom: 32px;
   }
 
+  .product-text {
+    text-align: left;
+  }
+
   .product-hidden, li.product-item-hidden:last-child {
     display: none;
   }
