--- a/style/style.css
+++ b/style/style.css
@@ -418,6 +418,9 @@ a {
     gap: 16px;
     margin-bottom: 32px; }
 
+  .product-text {
+    text-align: left; }
+
   .product-hidden, li.product-item-hidden:last-child {
     display: none; }
 
